# program-SAMIR897

./: .gitignore  DEPLOYMENT.md  PROJECT_DESCRIPTION.md
anchor_project/: Anchor.toml  README.md  package.json  tsconfig.json
anchor_project/programs/leader_review/: Cargo.toml
anchor_project/programs/leader_review/src/: constants.rs  error.rs  lib.rs
anchor_project/programs/leader_review/src/instructions/: initialize.rs  mod.rs  submit_review.rs
anchor_project/programs/leader_review/src/state/: mod.rs
anchor_project/tests/: leader_review.ts
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/public/picture/: jailer.avif
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/votes/: page.tsx
frontend/src/components/: CandidateCard.tsx  RatingStars.tsx  StatCard.tsx
frontend/src/hooks/: useLeaderReview.ts
frontend/src/lib/: config.ts
frontend/src/lib/idl/: leader_review.json
frontend/src/lib/types/: leader_review.ts
